--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,8 @@ matrix:
           - android-28
 #          - sys-img-armeabi-v7a-android-22
           - extra-android-m2repository
+    - name: msys2
+      os: windows
 
 env:
   global:
@@ -83,6 +85,12 @@ before_install:
     sudo gem install cocoapods &&
     pod repo add --silent igagis https://$MYCI_GIT_USERNAME:$MYCI_GIT_ACCESS_TOKEN@github.com/igagis/cocoapods-repo.git &&
     pod install --project-directory=xcode;
+  fi
+- if [ "$TRAVIS_JOB_NAME" == "msys2" ]; then
+    ([[ ! -f C:/tools/msys64/msys2_shell.cmd ]] && rm -rf C:/tools/msys64) &&
+    choco upgrade --no-progress -y msys2 &&
+    taskkill //IM gpg-agent.exe //F &&
+    $msys2 pacman --sync --clean --noconfirm;
   fi
 - export PACKAGE_VERSION=$(myci-deb-version.sh debian/changelog)
 
