--- a/msys2/PKGBUILD.in
+++ b/msys2/PKGBUILD.in
@@ -31,8 +31,8 @@ groups=()
 
 depends=("${pkgPrefix}utki" "${pkgPrefix}papki" "${pkgPrefix}unikod")
 
-makedepends=('myci' 'prorab' 'prorab-extra' 'doxygen' '${pkgPrefix}clargs')
-checkdepends=('myci')
+makedepends=("myci" "prorab" "prorab-extra" "doxygen" "${pkgPrefix}clargs")
+checkdepends=("myci")
 optdepends=()
 provides=()
 conflicts=()
